log/build_2026-05-26_20-03-58/sudsakhon_mainprogram/stderr.log
  File "/home/ubuntu/ros2_ws/install/sudsakhon_mainprogram/lib/python3.12/site-packages/sudsakhon_mainprogram/main_controller.py", line 671
    elif self.mission_step == 12.2 and self.arrived():
    ^^^^
SyntaxError: invalid syntax

